# fileutils

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: compression.rs  lib.rs  read.rs  write.rs
